=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.12_01-dev

add PERL_TIE_TABLES and PERL_DIRECTIVE_HANDLERS to EVERYTHING=1 group

add some casts to avoid warnings from const char changes in 1.3.1-dev

write_client will break out of it's loop if rwrite returns a -1 error 
condition, which could cause spinning httpds otherwise
[Eric Eisenhart <eric@sonic.net>]

properly default $Apache::Registry::NameWithVirtualHost=1, 
thanks to spot by Ryan A. Whelan

fix tied $r->err_headers_out cut-n-pasto [Peter Kaas <Peter.Kaas@lunatech.com>]

Apache::read_client_block will now use safemalloc/safefree, rather
than palloc, so memory is released after each read(), rather than at
the end of a request.  (e.g. so file uploads don't cause too much growth)

Added mod_perl_method_handlers.pod file, a little article about using
perl objects with modperl. [ ask@netcetera.dk ]

Apache::Registry will now save END blocks just after the script is compiled,
instead of after the subroutine call.  otherwise, if the client breaks the
connection, the hard_timeout will jump out of perl_handler(), and the save 
will never happen.  Thanks to Robert Nice and Ben Laurie for spotting this.

bug fix so PATH_INFO is properly reset, thanks to David Sklar for the spot

=item 1.12 - June 14, 1998

added a long overdue CREDITS file

add SSLCacheServer{Port,Path} directives for ApacheSSL + 'make test'
[Adam Laurie <adam@algroup.co.uk>]

added $r->location method

Various fixes and improvements to the APACI support:

 - Added support for PERL_THREADS to apaci stuff.  
   This is needed under the bleeding edge Perl's 
   (e.g. 5.004_6X).
 - Avoid more unnecessary file copies and edits under 
   APACI situation. 
 - Cleanup the PERL_XXX hooks in apaci/mod_perl.config[.sh]
 [Ralf S. Engelschall]

 - Add additional .xs.o target to apaci/Makefile.tmpl to
   workaround braindead Makes.
 [Brian P Millett <bpm@ec-group.com>]
